# diy-iot-esp-firmware

./: .gitignore  Cargo.toml  cfg.toml  flash.sh  rust-toolchain.toml  setup_debug.sh  setup_env.sh
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: coap.rs  errors.rs  main.rs  pairing.rs  utils.rs  wifi_utils.rs
utility-scripts/: env.sh  hello  reset_esp.sh  setup_debug.sh
