[package]
name = "diy_iot_esp_firmware"
version = "0.1.0"
authors = ["sikora77 <sikorski.jakubjan@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.14.0" }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32", "log"] }
coap-lite = { version = "0.11.3", default-features = false }
esp-alloc = { version = "0.3.0" }
heapless = { version = "0.7.16", default-features = false }
embedded-svc = { version = "0.25.1", default-features = false, features = [] }
embedded-io = "0.4.0"
log = "0.4.18"
smoltcp = { version = "0.10.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "proto-dns",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "socket-dns",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
anyhow = { version = "1.0.75", default-features = false }
serde_json = { version = "1.0.105", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
[dependencies.esp-wifi]
git = "https://github.com/esp-rs/esp-wifi.git"

# `esp-wifi` is in active development. It is often a good idea to lock it to a specific commit
rev = "6b53683586e29bcec7af23309d788fed4fb49f2c"

# A supported chip needs to be specified, as well as specific use-case features 
features = ["esp32", "wifi", "esp-now", "ps-min-modem", "wifi-logs"]

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "off"
