[package]
name = "diy_iot_esp_firmware"
version = "0.1.0"
authors = ["sikora77 <sikorski.jakubjan@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
esp-hal = { version = "0.18.0", default-features = false }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32", "log"] }
coap-lite = { version = "0.11.3", default-features = false }
esp-alloc = { version = "0.3.0" }
heapless = { version = "0.7.16", default-features = false }
embedded-svc = { version = "0.25.1", default-features = false, features = [] }
embedded-io = "0.4.0"
log = "0.4.18"
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "proto-dns",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "socket-dns",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
    "macros",
    "async",
] }
anyhow = { version = "1.0.75", default-features = false }
serde_json = { version = "1.0.105", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
esp-wifi = { version = "0.6.0", features = [
    "esp32",
    "wifi-default",
    "ble",
    "utils",
    "esp-now",
    "ps-min-modem",
    "udp",
    "dns",
    "coex",
] }

esp-storage = { version = "0.3.0", features = ["esp32"] }

embedded-storage = "0.3.1"
[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "off"
[profile.dev.package.esp-storage]
opt-level = 3
