[package]
name = "diy_iot_esp_firmware"
version = "0.1.0"
authors = ["sikora77 <sikorski.jakubjan@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# This removes vscode error about not finding test
[[bin]]
name = "diy_iot_esp_firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = ["esp32", "unstable"] }
esp-backtrace = { version = "0.16.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.14.0", features = ["esp32", "log-04"] }
coap-lite = { version = "0.11.3", default-features = false }
esp-alloc = { version = "0.8.0" }
heapless = { version = "0.7.16", default-features = false }
embedded-svc = { version = "0.25.1", default-features = false, features = [] }
embedded-io = "0.6.1"
log = "0.4.18"
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "socket-dhcpv4",
] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
    "async",
    "macros",
] }
anyhow = { version = "1.0.75", default-features = false }
serde_json = { version = "1.0.105", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
esp-wifi = { version = "0.14.1", features = [
    "ble",
    "builtin-scheduler",
    "coex",
    "esp-alloc",
    "esp32",
    "smoltcp",
    "wifi",
] }

esp-storage = { version = "0.3.0", features = [
    "esp32",
    "nor-flash",
    "storage",
] }

embedded-storage = "0.3.1"
[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package.esp-storage]
opt-level = 3
log = { version = "0.4.21" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
